# music-librarian

./: .gitignore  Cargo.toml
src/: cache.rs  itunes.rs  lib.rs  main.rs  spotify.rs
