[package]
name = "music-librarian"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.11"
dialoguer = "0.11.0"
elementtree = "1.2.3"
indicatif = "0.17.11"
rspotify = {version = "0.14.0", features = ["cli", "env-file"]}
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
